# metatessera

./: LICENSE  README.md  pyproject.toml
metatessera/: __init__.py  hashs.py  metatessera_en_US.py  setup.py  support.py
