[tool.poetry]
name = "metatessera"
version = "0.0.5"
description = "metatessera is a cli app, which shows the whole summary of a file!"
authors = "Paulo Daniel"
readme = "README.md"

[tool.poetry.dependencies]
python = '^3.10'
click = '^8.1.3'
rich = '^12.6.0'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
